# Simple_ATM_Machine

./: README.md
Documents/Flowcharts/Flowcharts - Drawio/: ATM_APP.drawio  MBTN.drawio  SPI.drawio  Simple ATM Machine - CARD ECU Application Flowchart.drawio  Simple ATM Machine - Layered Architecture.drawio  Simple ATM Machine - System Modules.drawio  TWI&EEPROM.drawio  UART.drawio
Simple_ATM_Machine/: CMakeLists.txt  Simple_ATM_Machine.atsln
Simple_ATM_Machine/ATM_ECU/: ATM_ECU.cproj  CMakeLists.txt  main.c  main.h
Simple_ATM_Machine/ATM_ECU/APP/: app_interface.h  app_program.c
Simple_ATM_Machine/ATM_ECU/HAL/btn/: btn_config.h
Simple_ATM_Machine/ATM_ECU/LIB/: std.h
Simple_ATM_Machine/CARD_ECU/: CARD_ECU.cproj  CMakeLists.txt  main.c  main.h
Simple_ATM_Machine/CARD_ECU/APP/: app_interface.h  app_program.c
Simple_ATM_Machine/CARD_ECU/HAL/eeprom/: External_EEPROM.c  External_EEPROM.h
Simple_ATM_Machine/CARD_ECU/HAL/lcd/: lcd_config.h  lcd_interface.h
Simple_ATM_Machine/CARD_ECU/LIB/: bit_math.h  std.h
Simple_ATM_Machine/CARD_ECU/MCAL/dio/: dio_program.c
Simple_ATM_Machine/CARD_ECU/MCAL/spi/: spi_config.h  spi_interface.h  spi_private.h  spi_program.c
Simple_ATM_Machine/CARD_ECU/MCAL/twi/: twi.c  twi.h  twi_cfg.h
Simple_ATM_Machine/CARD_ECU/MCAL/uart/: uart_config.h  uart_interface.h  uart_private.h  uart_program.c
Simulation/: Clip_Simple_ATM_Machine.pdsclip  Simple_ATM_Machine.pdsprj
Simulation/hex/: ATM_ECU.elf  ATM_ECU.hex  CARD_ECU.elf  CARD_ECU.hex
Test Cases/: Hacker Kermit - Test Protocol Simple ATM Machine.xlsx
(+17 files in other folders)
